--- a/package.json
+++ b/package.json
@@ -8,5 +8,13 @@
   "dependencies": {
     "bitcoin": "^3.0.1",
     "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "webpack": "^3.10.0"
   }
 }
