--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "bitcoin": "^3.0.1",
     "express": "^4.16.2",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
